2002-11-20  Eric Schabell <eschabell@sourcemage.org>

		IMPORTANT: Security bugfix for Samba
	    ------------------------------------
        Summary

		A security hole has been discovered in versions 2.2.2 through 2.2.6
		of Samba that could potentially allow an attacker to gain root access
		on the target machine.  The word "potentially" is used because there
		is no known exploit of this bug, and the Samba Team has not been able to
		craft one ourselves. However, the seriousness of the problem warrants
		this immediate 2.2.7 release.
		In addition to addressing this security issue, Samba 2.2.7 also includes
		thirteen unrelated improvements. These improvements result from our
		process of continuous quality assurance and code review, and are part of
		the Samba team's commitment to excellence.
		There was a bug in the length checking for encrypted password change
		requests from clients. A client could potentially send an encrypted
		password, which, when decrypted with the old hashed password could be
		used as a buffer overrun attack on the stack of smbd. The attach would
		have to be crafted such that converting a DOS codepage string to little
		endian UCS2 unicode would translate into an executable block of code.
		All versions of Samba between 2.2.2 to 2.2.6 inclusive are vulnerable
		to this problem. This version of Samba 2.2.7 contains a fix for this
		problem.
		Earlier versions of Samba are not vulnerable.

2002-10-27  Eric Schabell <eschabell@sourcemage.org>

		Fixed bug in POST_INSTALL, #1472.

2002-10-21  Eric Schabell <eschabell@sourcemage.org>

		Bumped version as old sources not avail.. fixes bug #1420.

		Added POST_INSTALL with code from neal birch that takes care
		of a missing /var/run/samba dir, fixes bug #243.
		
2002-10-17  Eric Schabell <eschabell@sourcemage.org>

        removed gcc2 file.

2002-09-26  Eric Sandall <eric@sandall.us>

		Added 3 working URLs and removed the 3 non-working URLs
		Changed SOURCE to use .bz2 instead of .gz