@@ -1,9 +1,0 @@
-service netbios-ns
-{
-	socket_type	= dgram
-	protocol	= udp
-	wait		= yes
-	user		= root
-	group		= root
-	server		= /usr/sbin/nmbd
-}
