@@ -1,9 +1,0 @@
-service swat
-{
-	socket_type	= stream
-	protocol	= tcp
-	wait		= no
-	user		= root
-	group		= root
-	server		= /usr/sbin/swat
-}
